--- a/src/pages/Contact/contact.module.css
+++ b/src/pages/Contact/contact.module.css
@@ -7,12 +7,13 @@
   padding: 1rem;
 
   & input {
-    background-color: var(--vp-c-bg-elv-up);
+    background-color: var(--vp-c-bg-soft-mute);
     padding: 1rem;
     border-radius: 5px;
   }
 
   & textarea {
+    background-color: var(--vp-c-bg-soft-mute);
     padding: 1rem;
     border-radius: 5px;
   }
