--- a/src/components/Nav/nav.module.css
+++ b/src/components/Nav/nav.module.css
@@ -1,8 +1,8 @@
 .Nav {
     position: relative;
-    top: var(--vp-layout-top-height, 0px);
+    top: var(--layout-top-height, 0px);
     left: 0;
-    z-index: var(--vp-z-index-nav);
+    z-index: var(--z-index-nav);
     width: 100svw;
     pointer-events: none;
     transition: background-color 500ms;
