--- a/src/pages/Resume/resume.css
+++ b/src/pages/Resume/resume.css
@@ -19,8 +19,8 @@
   font-size: 16px;
   height: 100%;
   max-width: 1440px;
-  color: var(--vp-c-text-dark-1);
-  background-color: var(--vp-c-bg);
+  color: var(--c-text-dark-1);
+  background-color: var(--c-bg);
   display: flex;
   padding: 1.25rem;
 
@@ -34,12 +34,12 @@
   & .body {
     display: flex;
     flex-direction: column;
-    background-color: var(--vp-c-bg-elv-up);
+    background-color: var(--c-bg-elv-up);
     padding-inline: 1rem;
     width: 100%;
     max-width: 400px;
     margin-inline: auto;
-    border: 1px solid var(--vp-c-gutter);
+    border: 1px solid var(--c-gutter);
 
     @media (min-width: 768px) {
       max-width: 700px;
@@ -47,8 +47,8 @@
       background: -webkit-gradient(linear,
           left top,
           right top,
-          color-stop(33%, var(--vp-c-bg-elv-down)),
-          color-stop(33%, var(--vp-c-bg-elv)));
+          color-stop(33%, var(--c-bg-elv-down)),
+          color-stop(33%, var(--c-bg-elv)));
       padding-inline: 36px;
     }
 
@@ -57,7 +57,7 @@
     & h2,
     & h3,
     & h4 {
-      color: var(--vp-c-text-1);
+      color: var(--c-text-1);
       font-family: 'Raleway', sans-serif;
       margin: 0;
       line-height: unset;
@@ -127,11 +127,11 @@
       text-align: center;
       margin-inline: auto;
       margin-block: 1.25rem;
-      border: 1px solid var(--vp-c-border);
+      border: 1px solid var(--c-border);
       line-height: 0.75;
       padding-block: 20px;
       width: 80%;
-      background: var(--vp-c-bg-elv);
+      background: var(--c-bg-elv);
 
       @media (min-width: 768px) {
         width: 60%;
@@ -143,7 +143,7 @@
     & li {
       font-family: 'Open Sans', sans-serif;
       font-size: .55rem;
-      color: var(--vp-c-text-2);
+      color: var(--c-text-2);
       font-weight: 500;
 
       @media (min-width: 768px) {
@@ -276,7 +276,7 @@
       }
 
       & .divider {
-        border-block-end: 0.0156rem solid var(--vp-c-border);
+        border-block-end: 0.0156rem solid var(--c-border);
 
         @media (min-width: 768px) {}
       }
