--- a/src/components/Nav/NavBar/NavBarHamburger/navBarHamburger.module.css
+++ b/src/components/Nav/NavBar/NavBarHamburger/navBarHamburger.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 48px;
-    height: var(--vp-nav-height);
+    height: var(--nav-height);
 
     @media (min-width: 768px) {
         display: none;
@@ -54,7 +54,7 @@
 .NavBarHamburger.active:hover .middle,
 .NavBarHamburger.active:hover .bottom {
     left: 0;
-    background-color: var(--vp-c-text-2);
+    background-color: var(--c-text-2);
     transition: top 250ms, background-color 500ms, transform 250ms
 }
 
@@ -64,7 +64,7 @@
     position: absolute;
     width: 16px;
     height: 2px;
-    background-color: var(--vp-c-text-1);
+    background-color: var(--c-text-1);
     transition: top 250ms, background-color 500ms, transform 250ms
 }
 
