--- a/src/components/Nav/NavBar/NavBarMenu/NavBarMenuLink/navBarMenuLink.module.css
+++ b/src/components/Nav/NavBar/NavBarMenu/NavBarMenuLink/navBarMenuLink.module.css
@@ -2,21 +2,21 @@
     display: flex;
     align-items: center;
     padding: 0 12px;
-    line-height: var(--vp-nav-height);
+    line-height: var(--nav-height);
     font-size: 14px;
     font-weight: 500;
-    color: var(--vp-c-text-1);
+    color: var(--c-text-1);
     transition: color 250ms;
 }
 
 .NavBarMenuLink.active,
 .NavBarMenuLink:hover {
-    color: var(--vp-c-brand);
+    color: var(--c-brand);
 }
 
 .dark .NavBarMenuLink.NavBarMenuLink:hover,
 .dark .NavBarMenuLink.NavBarMenuLink.active,
 .dark .link.link:hover,
 .dark .link.link.active {
-    color: var(--vp-c-brand-lighter);
+    color: var(--c-brand-lighter);
 }
