--- a/src/components/Nav/NavBar/NavBarSocialLinks/navBarSocialLinks.module.css
+++ b/src/components/Nav/NavBar/NavBarSocialLinks/navBarSocialLinks.module.css
@@ -19,12 +19,12 @@
     justify-content: center;
     width: 36px;
     height: 36px;
-    color: var(--vp-c-text-2);
+    color: var(--c-text-2);
     transition: color 500ms;
 }
 
 .SocialLink:hover {
-    color: var(--vp-c-text-1);
+    color: var(--c-text-1);
     transition: color 250ms;
 }
 
@@ -44,6 +44,6 @@
     margin-inline-start: 8px;
     width: 1px;
     height: 24px;
-    background-color: var(--vp-c-divider);
+    background-color: var(--c-divider);
     content: '';
 }
