--- a/src/components/Nav/NavBar/NavBarTitle/navBarTitle.module.css
+++ b/src/components/Nav/NavBar/NavBarTitle/navBarTitle.module.css
@@ -3,10 +3,10 @@
     align-items: center;
     border-block-end: 1px solid transparent;
     width: 100%;
-    height: var(--vp-nav-height);
+    height: var(--nav-height);
     font-size: 16px;
     font-weight: 600;
-    color: var(--vp-c-text-1);
+    color: var(--c-text-1);
     transition: opacity 250ms;
 
     @media (min-width: 960px) {
