--- a/src/components/Nav/NavBar/navBar.module.css
+++ b/src/components/Nav/NavBar/navBar.module.css
@@ -2,7 +2,7 @@
   position: relative;
   border-block-end: 1px solid transparent;
   padding: 0 8px 0 24px;
-  height: var(--vp-nav-height);
+  height: var(--nav-height);
   transition: border-color 500ms, background-color 500ms;
   pointer-events: none;
 
@@ -12,8 +12,8 @@
 }
 @media (min-width: 960px) {
   .NavBar.fill {
-    border-bottom-color: var(--vp-c-gutter);
-    background-color: var(--vp-nav-bg-color);
+    border-bottom-color: var(--c-gutter);
+    background-color: var(--nav-bg-color);
   }
 }
 
@@ -21,8 +21,8 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  max-width: calc(var(--vp-layout-max-width) - 64px);
-  height: var(--vp-nav-height);
+  max-width: calc(var(--layout-max-width) - 64px);
+  height: var(--nav-height);
   pointer-events: none;
 }
 
@@ -32,7 +32,7 @@
 
 .title {
   flex-shrink: 0;
-  height: calc(var(--vp-nav-height) - 1px);
+  height: calc(var(--nav-height) - 1px);
   transition: background-color 500ms;
 }
 
@@ -45,7 +45,7 @@
   justify-content: flex-end;
   align-items: center;
   /* max-width: 671px; */
-  height: calc(var(--vp-nav-height) - 1px);
+  height: calc(var(--nav-height) - 1px);
   transition: background-color 500ms;
 }
 
@@ -56,6 +56,6 @@
 
 @media (min-width: 960px) {
   .NavBar.fill {
-    background-color: var(--vp-nav-bg-color);
+    background-color: var(--nav-bg-color);
   }
 }
