--- a/src/pages/Portfolio/portfolio.module.css
+++ b/src/pages/Portfolio/portfolio.module.css
@@ -39,7 +39,7 @@
   line-height: 24px;
   font-size: 16px;
   font-weight: 500;
-  color: var(--vp-c-text-2);
+  color: var(--c-text-2);
 
   @media (min-width: 768px) {
     max-width: 592px;
@@ -88,7 +88,7 @@
 
 .profile {
   flex-grow: 1;
-  background-color: var(--vp-c-bg-soft);
+  background-color: var(--c-bg-soft);
 }
 
 .avatar {
@@ -104,7 +104,7 @@
   flex-shrink: 0;
   margin: 0 auto;
   border-radius: 50%;
-  box-shadow: var(--vp-shadow-3);
+  box-shadow: var(--shadow-3);
 }
 
 .ProjectItem.medium .avatar {
@@ -157,7 +157,7 @@
   position: relative;
   padding-right: 8px;
   margin-bottom: 8px;
-  color: var(--vp-c-text-2);
+  color: var(--c-text-2);
 }
 
 .desc {
@@ -193,12 +193,12 @@
   align-items: center;
   width: 36px;
   height: 36px;
-  color: var(--vp-c-text-2);
+  color: var(--c-text-2);
   transition: color 500ms;
 }
 
 .SocialLink:hover {
-  color: var(--vp-c-text-1);
+  color: var(--c-text-1);
   transition: color 250ms;
 }
 
@@ -211,8 +211,8 @@
 .sp .sp-link.link:hover,
 .sp .sp-link.link:focus {
   outline: none;
-  color: var(--vp-c-white);
-  background-color: var(--vp-c-sponsor);
+  color: var(--c-white);
+  background-color: var(--c-sponsor);
 }
 
 .sp-link {
@@ -223,8 +223,8 @@
   padding: 16px;
   font-size: 14px;
   font-weight: 500;
-  color: var(--vp-c-sponsor);
-  background-color: var(--vp-c-bg-soft);
+  color: var(--c-sponsor);
+  background-color: var(--c-bg-soft);
   transition: color 250ms, background-color 250ms;
 }
 
