--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,51 @@
 @font-face {
   font-family: 'Inter';
-  src: url('./assets/Inter-VariableFont_slnt,wght.woff2')
+  src: url('./assets/font/Inter-VariableFont_slnt,wght.woff2')
     format('woff2-variations');
   font-style: normal;
   font-weight: 100 900;
   font-variation-settings: slnt -10 0;
+  font-display: optional;
+}
+
+@font-face {
+  font-family: 'Inter-fallback';
+  size-adjust: 107%;
+  ascent-override: 90%;
+  src: local('Arial');
+}
+
+@font-face {
+  font-family: 'Raleway';
+  src: url('./../../assets/font/raleway/Raleway-VariableFont_wght.woff2')
+    format('woff2-variations');
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: optional;
+}
+
+@font-face {
+  font-family: 'Raleway-fallback';
+  size-adjust: 104.10000000000005%;
+  ascent-override: 82%;
+  src: local('Arial');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('./../../assets/font/open-sans/OpenSans-VariableFont_wdth,wght.woff2')
+    format('woff2-variations');
+  font-style: normal;
+  font-weight: 300 800;
+  font-stretch: 75% 100%;
+  font-display: optional;
+}
+
+@font-face {
+  font-family: 'Open Sans-fallback';
+  size-adjust: 105.44%;
+  ascent-override: 98%;
+  src: local('Arial');
 }
 
 :root {
@@ -110,7 +151,7 @@
 }
 
 :root {
-  --font-family-base: 'Inter var', 'Inter', ui-sans-serif, system-ui,
+  --font-family-base: 'Inter', 'Inter-fallback', ui-sans-serif, system-ui,
     -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue',
     Helvetica, Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
