--- a/src/components/Features/features.module.css
+++ b/src/components/Features/features.module.css
@@ -84,5 +84,5 @@
     line-height: 24px;
     font-size: 14px;
     font-weight: 500;
-    color: var(--c-text-2);
+    color: var(--details-color);
 }
