--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -1,5 +1,5 @@
 .Home {
-  padding-block-end:96px;
+  padding-block-end: 96px;
 
   @media (min-width: 768px) {
     padding-block-end: 128px;
@@ -8,14 +8,17 @@
 
 .Hero {
   margin-top: calc((var(--nav-height) + var(--layout-top-height, 0px)) * -1);
-  padding: calc(var(--nav-height) + var(--layout-top-height, 0px) + 48px) 24px 48px;
+  padding: calc(var(--nav-height) + var(--layout-top-height, 0px) + 48px) 24px
+    48px;
 
   @media (min-width: 640px) {
-    padding: calc(var(--nav-height) + var(--layout-top-height, 0px) + 80px) 48px 64px;
+    padding: calc(var(--nav-height) + var(--layout-top-height, 0px) + 80px) 48px
+      64px;
   }
 
   @media (min-width: 960px) {
-    padding: calc(var(--nav-height) + var(--layout-top-height, 0px) + 80px) 64px 64px;
+    padding: calc(var(--nav-height) + var(--layout-top-height, 0px) + 80px) 64px
+      64px;
   }
 }
 
@@ -37,7 +40,7 @@
     flex-direction: row;
   }
 }
-  
+
 .main {
   position: relative;
   z-index: 10;
@@ -57,7 +60,7 @@
   }
 }
 
-.Hero.has-image .name, 
+.Hero.has-image .name,
 .Hero.has-image .text {
   margin: 0 auto;
 }
@@ -66,7 +69,8 @@
   color: var(--home-hero-name-color);
 }
 
-.name, .text {
+.name,
+.text {
   max-width: 392px;
   letter-spacing: -0.4px;
   line-height: 40px;
@@ -76,7 +80,8 @@
 }
 
 @media (min-width: 640px) {
-  .name, .text {
+  .name,
+  .text {
     max-width: 576px;
     line-height: 56px;
     font-size: 48px;
@@ -84,7 +89,8 @@
 }
 
 @media (min-width: 960px) {
-  .Hero.has-image .name, .Hero.has-image .text {
+  .Hero.has-image .name,
+  .Hero.has-image .text {
     line-height: 64px;
     font-size: 56px;
     margin: 0;
@@ -155,7 +161,7 @@
 .Button.brand {
   border-color: var(--button-brand-border);
   color: var(--button-brand-text);
-  background-color: var(--button-brand-bg); 
+  background-color: rgb(90, 99, 252);
 }
 
 .Button.brand:hover {
@@ -251,7 +257,7 @@
   background-image: var(--home-hero-image-background-image);
   filter: var(--home-hero-image-filter);
   transform: translate(-50%, -50%);
-  
+
   @media (min-width: 640px) {
     width: 256px;
     height: 256px;
@@ -269,8 +275,9 @@
   left: 50%;
   max-width: 152px;
   max-height: 152px;
-  transform: translate(-50%,-50%);
-  filter:  drop-shadow(-8px -6px 12px rgb(39, 278, 255, 0.25)) drop-shadow(4px 4px 12px rgb(0, 0, 0, 0.25));
+  transform: translate(-50%, -50%);
+  filter: drop-shadow(-8px -6px 12px rgb(39, 278, 255, 0.25))
+    drop-shadow(4px 4px 12px rgb(0, 0, 0, 0.25));
 
   @media (min-width: 640px) {
     max-width: 216px;
