--- a/src/pages/Contact/contact.module.css
+++ b/src/pages/Contact/contact.module.css
@@ -18,7 +18,7 @@
     border-radius: 5px;
   }
 
-  & input[type="submit"] {
+  & input[type='submit'] {
     margin-top: 1rem;
     padding: 1rem;
     background-color: var(--c-brand);
@@ -43,4 +43,13 @@
     font-weight: 700;
     text-transform: uppercase;
   }
+}
+
+.message {
+  display: flex;
+  justify-content: center;
+  line-height: 24px;
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--c-text);
 }
