--- a/src/components/Nav/NavBar/NavBarMenu/navBarMenu.module.css
+++ b/src/components/Nav/NavBar/NavBarMenu/navBarMenu.module.css
@@ -5,3 +5,26 @@
         display: flex;
     }
 }
+
+.NavBarMenuLink {
+    display: flex;
+    align-items: center;
+    padding: 0 12px;
+    line-height: var(--nav-height);
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--c-text-1);
+    transition: color 250ms;
+}
+
+.NavBarMenuLink.active,
+.NavBarMenuLink:hover {
+    color: var(--c-brand);
+}
+
+.dark .NavBarMenuLink.NavBarMenuLink:hover,
+.dark .NavBarMenuLink.NavBarMenuLink.active,
+.dark .link.link:hover,
+.dark .link.link.active {
+    color: var(--c-brand-lighter);
+}
