--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -289,3 +289,39 @@
     max-height: 280px;
   }
 }
+
+.eyes-container {
+  display: flex;
+}
+
+.eyes-container .eyes {
+  position: relative;
+  display: block;
+  background-color: white;
+  border-radius: 50%;
+
+  @media (min-width: 960px) {
+    width: 18px;
+    height: 18px;
+    margin: -36px 16px;
+    box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2),
+      inset 0 0 15px rgb(71 202 255 / 0.6), inset 0 0 25px rgb(71 202 255 / 0.6);
+  }
+}
+
+.container .eyes::before {
+  content: '';
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background: #000;
+  position: absolute;
+  box-sizing: border-box;
+
+  @media (min-width: 960px) {
+    left: 3px;
+    width: 9px;
+    height: 9px;
+    border: 3px solid black;
+  }
+}
