--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -299,13 +299,26 @@
   display: block;
   background-color: white;
   border-radius: 50%;
+  box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2),
+    inset 0 0 15px rgb(71 202 255 / 0.6), inset 0 0 25px rgb(71 202 255 / 0.6);
+  text-align: left;
+  width: 8px;
+  height: 8px;
+  margin: 140px 11px;
+  translate: 130px 2px;
+
+  @media (min-width: 640px) {
+    width: 12px;
+    height: 12px;
+    margin: 170px 14px;
+    translate: 155px 0;
+  }
 
   @media (min-width: 960px) {
-    width: 18px;
-    height: 18px;
-    margin: -36px 16px;
-    box-shadow: 0 5px 45px rgba(0, 0, 0, 0.2),
-      inset 0 0 15px rgb(71 202 255 / 0.6), inset 0 0 25px rgb(71 202 255 / 0.6);
+    width: 14px;
+    height: 14px;
+    margin: -35px 18px;
+    translate: revert;
   }
 }
 
@@ -317,11 +330,22 @@
   background: #000;
   position: absolute;
   box-sizing: border-box;
+  left: 2px;
+  width: 3px;
+  height: 3px;
+  border: 2px solid black;
+
+  @media (min-width: 640px) {
+    left: 3px;
+    width: 6px;
+    height: 6px;
+    border: 3px solid black;
+  }
 
   @media (min-width: 960px) {
     left: 3px;
-    width: 9px;
-    height: 9px;
-    border: 3px solid black;
+    width: 8px;
+    height: 8px;
+    border: 4px solid black;
   }
 }
